# sentinel-sview

./: .env.example  .flaskenv  .gitignore  .gitlab-ci.yml  Changelog.md  MANIFEST.in  README.md  base.db  config_example.py  model.py  pyproject.toml  setup.cfg  setup.py  ws.py
data/: README.md  import.py  passwords.csv  scheme.sql
dev/: data.sql  scheme.sql
dynfw_backend/: __main__.py
password_checker/: __init__.py  utils.py
password_checker/schema/: request.json  response.json
pwned_backend/: README.md  __init__.py  __init__.py.old  utils.py
pwned_backend/database/: __init__.py  models.py
schema/: passy.json  response.json
src/base/: __init__.py  _depraceted_ models.py  models.py  scheme.sql
src/passy/: __init__.py  backend.py  crypto.py  models.py  utils.py
src/passy/database/: __init__.py  models.py
src/pwned/: __init__.py  backend.py  utils.py
src/pwned/database/: __init__.py
sview/: __init__.py  aggregation.py  aggregation_tools.py  api.py  attackers.py  cli.py  dashboard.py  data.py  data_helpers.py  db.py  default_settings.py  dynfw.py  exceptions.py  extension_influx.py  extensions.py  filters.py  job_helpers.py  jobs.py  opendata.py  password_checker.py  passwords.py  periods.py  pwned.py  queries.py  report.py  resources.py  resources_tools.py  rlimit.py  scheme.sql  statistics.py  tasks.py  testdata.sql  view_helpers.py  web.py
sview/dev/: populate_influx.py
sview/queries/: __init__.py  limits.py  post_process.py  time.py
sview/statistics/: __init__.py  scheme.sql  testdata.sql  view_helpers.py  views.py
sview/templates/: _macros.html  _snippets.html  index.html  layout.html
tests/: conftest.py  insert_pg.py  insert_postgres.py  pg_manager.py  test_api.py  test_database.py  test_unit.py  testconfig.cfg  utils.py
tests/files/: schema.sql  testing_data.sql
tests/utils/: pg_manager.py
(+62 files in other folders)
