[tool.poetry]
name = "sview"
version = "1.4.3"
description = "Turris:Sentinel - visualization app for Sentinel data"
authors = ["CZ.NIC, z.s.p.o. <packaging@turris.cz>"]
readme = "README.md"
homepage = "https://gitlab.nic.cz/turris/sentinel/sview"
packages = [
	{ include = "sview" },
	{ include = "password_checker" },
	{ include = "dynfw_backend" }
]


[tool.poetry.scripts]
dynfw-backend = 'dynfw_backend.__main__:main'


[tool.poetry.dependencies]
python = ">= 3.8.1, < 3.12"
Flask = "~2.2.5"
Flask-Babel = "~2.0.0"
Flask-Caching = "~2.3.0"
Flask-Mail = "~0.9.1"
Flask-Menu = "~0.7.3"
Flask-Migrate = "~3.1.0"
Flask-Redis = "~0.4.0"
Flask-RQ2 = "18.3"
Flask-SQLAlchemy = "~2.5.1"
Flask-Breadcrumbs = "~0.5.1"
geoip2 = "~4.8.1"
jsonschema = "~4.23.0"
psycopg2-binary = "~2.9.3"
pycountry = "24.6.1"
python-dotenv = "~1.0.1"
simplejson = "~3.19.3"
sn = { git = "https://gitlab.nic.cz/turris/sentinel/sn", tag = "v0.3.1" }
SQLAlchemy = "~1.4.54"
websockets = "13.1"
Werkzeug = "~2.3.8"

coverage = { version = "~7.5.4", optional = true}
pytest = { version = "~8.3.2", optional = true }
pytest-cov = { version = "~5.0.0", optional = true }

[tool.poetry.extras]
tests = [ "coverage", "pytest", "pytest-cov" ]


[tool.poetry.group.dev.dependencies]
black = "23.12.1"
flake8 = "~6.1.0"
Flake8-pyproject = "1.2.3"


[tool.flake8]
max-line-length = 100
select = ["C", "E", "F", "W", "B", "B950"]
ignore = ["E203", "E231", "E501", "W503"]
per-file-ignores = [
    "tests/*:F811,F401",
    "doc/examples/*:E201,E202,E402,E999,F821,F401,F811,F811"
]


[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = "tests"
python_files = "test_*.py"
console_output_style = "count"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
